[project]
name = "road-accidents-dashboard"
version = "0.1.0"
description = "Visualize road accidents data"
authors = ["Gabriel Torres Gamez"]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "altair>=5.5.0",
    "geopandas>=1.0.1",
    "marimo>=0.10.2",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "pyarrow>=18.1.0",
    "ruff>=0.8.3",
]
